fixed google maps distortion issue

--- a/files/style.css
+++ b/files/style.css
@@ -133,3 +133,7 @@ margin-right: 15px;
 	height: 30px;
 	vertical-align: middle;
 }
+
+#googleMap img {
+	max-width: inherit;
+}
